--- a/package.json
+++ b/package.json
@@ -24,5 +24,474 @@
     "eslint-config-trybe-fundamentals": "1.1.0",
     "faker": "5.5.3",
     "jest": "25.2.3"
-  }
+  },
+  "dependencies": {
+    "abab": "^2.0.5",
+    "acorn": "^7.4.1",
+    "acorn-globals": "^4.3.4",
+    "acorn-jsx": "^5.3.2",
+    "acorn-walk": "^6.2.0",
+    "ajv": "^6.12.6",
+    "ansi-colors": "^4.1.1",
+    "ansi-escapes": "^4.3.2",
+    "ansi-regex": "^5.0.0",
+    "ansi-styles": "^3.2.1",
+    "anymatch": "^3.1.2",
+    "argparse": "^1.0.10",
+    "arr-diff": "^4.0.0",
+    "arr-flatten": "^1.1.0",
+    "arr-union": "^3.1.0",
+    "array-equal": "^1.0.0",
+    "array-includes": "^3.1.3",
+    "array-unique": "^0.3.2",
+    "array.prototype.flat": "^1.2.4",
+    "asn1": "^0.2.4",
+    "assert-plus": "^1.0.0",
+    "assign-symbols": "^1.0.0",
+    "astral-regex": "^1.0.0",
+    "asynckit": "^0.4.0",
+    "atob": "^2.1.2",
+    "aws-sign2": "^0.7.0",
+    "aws4": "^1.11.0",
+    "babel-jest": "^25.5.1",
+    "babel-plugin-istanbul": "^6.0.0",
+    "babel-plugin-jest-hoist": "^25.5.0",
+    "babel-preset-current-node-syntax": "^0.1.4",
+    "babel-preset-jest": "^25.5.0",
+    "balanced-match": "^1.0.2",
+    "base": "^0.11.2",
+    "bcrypt-pbkdf": "^1.0.2",
+    "brace-expansion": "^1.1.11",
+    "braces": "^3.0.2",
+    "browser-process-hrtime": "^1.0.0",
+    "browser-resolve": "^1.11.3",
+    "browserslist": "^4.16.8",
+    "bser": "^2.1.1",
+    "buffer-from": "^1.1.2",
+    "cache-base": "^1.0.1",
+    "call-bind": "^1.0.2",
+    "callsites": "^3.1.0",
+    "camelcase": "^5.3.1",
+    "caniuse-lite": "^1.0.30001252",
+    "capture-exit": "^2.0.0",
+    "caseless": "^0.12.0",
+    "chalk": "^2.4.2",
+    "chardet": "^0.7.0",
+    "ci-info": "^2.0.0",
+    "class-utils": "^0.3.6",
+    "cli-cursor": "^3.1.0",
+    "cli-width": "^3.0.0",
+    "cliui": "^6.0.0",
+    "co": "^4.6.0",
+    "collect-v8-coverage": "^1.0.1",
+    "collection-visit": "^1.0.0",
+    "color-convert": "^1.9.3",
+    "color-name": "^1.1.3",
+    "colorette": "^1.3.0",
+    "combined-stream": "^1.0.8",
+    "commander": "^2.20.3",
+    "component-emitter": "^1.3.0",
+    "concat-map": "^0.0.1",
+    "confusing-browser-globals": "^1.0.10",
+    "convert-source-map": "^1.8.0",
+    "copy-descriptor": "^0.1.1",
+    "core-util-is": "^1.0.2",
+    "cross-spawn": "^6.0.5",
+    "cssom": "^0.4.4",
+    "cssstyle": "^2.3.0",
+    "dashdash": "^1.14.1",
+    "data-urls": "^1.1.0",
+    "debug": "^4.3.2",
+    "decamelize": "^1.2.0",
+    "decode-uri-component": "^0.2.0",
+    "deep-is": "^0.1.3",
+    "deepmerge": "^4.2.2",
+    "define-properties": "^1.1.3",
+    "define-property": "^2.0.2",
+    "delayed-stream": "^1.0.0",
+    "detect-newline": "^3.1.0",
+    "diff-sequences": "^25.2.6",
+    "doctrine": "^3.0.0",
+    "domexception": "^1.0.1",
+    "ecc-jsbn": "^0.1.2",
+    "editorconfig": "^0.15.3",
+    "electron-to-chromium": "^1.3.827",
+    "emoji-regex": "^8.0.0",
+    "end-of-stream": "^1.4.4",
+    "enquirer": "^2.3.6",
+    "error-ex": "^1.3.2",
+    "es-abstract": "^1.18.5",
+    "es-to-primitive": "^1.2.1",
+    "escalade": "^3.1.1",
+    "escape-string-regexp": "^1.0.5",
+    "escodegen": "^1.14.3",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-import-resolver-node": "^0.3.6",
+    "eslint-module-utils": "^2.6.2",
+    "eslint-plugin-editorconfig": "^2.1.3",
+    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-sonarjs": "^0.5.0",
+    "eslint-scope": "^5.1.1",
+    "eslint-utils": "^1.4.3",
+    "eslint-visitor-keys": "^1.3.0",
+    "espree": "^6.2.1",
+    "esprima": "^4.0.1",
+    "esquery": "^1.4.0",
+    "esrecurse": "^4.3.0",
+    "estraverse": "^4.3.0",
+    "esutils": "^2.0.3",
+    "exec-sh": "^0.3.6",
+    "execa": "^1.0.0",
+    "exit": "^0.1.2",
+    "expand-brackets": "^2.1.4",
+    "expect": "^25.5.0",
+    "extend": "^3.0.2",
+    "extend-shallow": "^3.0.2",
+    "external-editor": "^3.1.0",
+    "extglob": "^2.0.4",
+    "extsprintf": "^1.3.0",
+    "fast-deep-equal": "^3.1.3",
+    "fast-json-stable-stringify": "^2.1.0",
+    "fast-levenshtein": "^2.0.6",
+    "fb-watchman": "^2.0.1",
+    "figures": "^3.2.0",
+    "file-entry-cache": "^5.0.1",
+    "fill-range": "^7.0.1",
+    "find-up": "^2.1.0",
+    "flat-cache": "^2.0.1",
+    "flatted": "^2.0.2",
+    "for-in": "^1.0.2",
+    "forever-agent": "^0.6.1",
+    "form-data": "^2.3.3",
+    "fragment-cache": "^0.2.1",
+    "fs.realpath": "^1.0.0",
+    "function-bind": "^1.1.1",
+    "functional-red-black-tree": "^1.0.1",
+    "gensync": "^1.0.0-beta.2",
+    "get-caller-file": "^2.0.5",
+    "get-intrinsic": "^1.1.1",
+    "get-package-type": "^0.1.0",
+    "get-stream": "^4.1.0",
+    "get-value": "^2.0.6",
+    "getpass": "^0.1.7",
+    "glob": "^7.1.7",
+    "glob-parent": "^5.1.2",
+    "globals": "^12.4.0",
+    "graceful-fs": "^4.2.8",
+    "growly": "^1.3.0",
+    "har-schema": "^2.0.0",
+    "har-validator": "^5.1.5",
+    "has": "^1.0.3",
+    "has-bigints": "^1.0.1",
+    "has-flag": "^3.0.0",
+    "has-symbols": "^1.0.2",
+    "has-tostringtag": "^1.0.0",
+    "has-value": "^1.0.0",
+    "has-values": "^1.0.0",
+    "hosted-git-info": "^2.8.9",
+    "html-encoding-sniffer": "^1.0.2",
+    "html-escaper": "^2.0.2",
+    "http-signature": "^1.2.0",
+    "human-signals": "^1.1.1",
+    "iconv-lite": "^0.4.24",
+    "ignore": "^4.0.6",
+    "import-fresh": "^3.3.0",
+    "import-local": "^3.0.2",
+    "imurmurhash": "^0.1.4",
+    "inflight": "^1.0.6",
+    "inherits": "^2.0.4",
+    "inquirer": "^7.3.3",
+    "internal-slot": "^1.0.3",
+    "ip-regex": "^2.1.0",
+    "is-accessor-descriptor": "^0.1.6",
+    "is-arrayish": "^0.2.1",
+    "is-bigint": "^1.0.4",
+    "is-boolean-object": "^1.1.2",
+    "is-buffer": "^1.1.6",
+    "is-callable": "^1.2.4",
+    "is-ci": "^2.0.0",
+    "is-core-module": "^2.6.0",
+    "is-data-descriptor": "^0.1.4",
+    "is-date-object": "^1.0.5",
+    "is-descriptor": "^0.1.6",
+    "is-docker": "^2.2.1",
+    "is-extendable": "^0.1.1",
+    "is-extglob": "^2.1.1",
+    "is-fullwidth-code-point": "^3.0.0",
+    "is-generator-fn": "^2.1.0",
+    "is-glob": "^4.0.1",
+    "is-negative-zero": "^2.0.1",
+    "is-number": "^7.0.0",
+    "is-number-object": "^1.0.6",
+    "is-plain-object": "^2.0.4",
+    "is-regex": "^1.1.4",
+    "is-stream": "^1.1.0",
+    "is-string": "^1.0.7",
+    "is-symbol": "^1.0.4",
+    "is-typedarray": "^1.0.0",
+    "is-windows": "^1.0.2",
+    "is-wsl": "^2.2.0",
+    "isarray": "^1.0.0",
+    "isexe": "^2.0.0",
+    "isobject": "^3.0.1",
+    "isstream": "^0.1.2",
+    "istanbul-lib-coverage": "^3.0.0",
+    "istanbul-lib-instrument": "^4.0.3",
+    "istanbul-lib-report": "^3.0.0",
+    "istanbul-lib-source-maps": "^4.0.0",
+    "istanbul-reports": "^3.0.2",
+    "jest-changed-files": "^25.5.0",
+    "jest-config": "^25.5.4",
+    "jest-diff": "^25.5.0",
+    "jest-docblock": "^25.3.0",
+    "jest-each": "^25.5.0",
+    "jest-environment-jsdom": "^25.5.0",
+    "jest-environment-node": "^25.5.0",
+    "jest-get-type": "^25.2.6",
+    "jest-haste-map": "^25.5.1",
+    "jest-jasmine2": "^25.5.4",
+    "jest-leak-detector": "^25.5.0",
+    "jest-matcher-utils": "^25.5.0",
+    "jest-message-util": "^25.5.0",
+    "jest-mock": "^25.5.0",
+    "jest-pnp-resolver": "^1.2.2",
+    "jest-regex-util": "^25.2.6",
+    "jest-resolve": "^25.5.1",
+    "jest-resolve-dependencies": "^25.5.4",
+    "jest-runner": "^25.5.4",
+    "jest-runtime": "^25.5.4",
+    "jest-serializer": "^25.5.0",
+    "jest-snapshot": "^25.5.1",
+    "jest-util": "^25.5.0",
+    "jest-validate": "^25.5.0",
+    "jest-watcher": "^25.5.0",
+    "jest-worker": "^25.5.0",
+    "js-tokens": "^4.0.0",
+    "js-yaml": "^3.14.1",
+    "jsbn": "^0.1.1",
+    "jsdom": "^15.2.1",
+    "jsesc": "^2.5.2",
+    "json-parse-better-errors": "^1.0.2",
+    "json-parse-even-better-errors": "^2.3.1",
+    "json-schema": "^0.2.3",
+    "json-schema-traverse": "^0.4.1",
+    "json-stable-stringify-without-jsonify": "^1.0.1",
+    "json-stringify-safe": "^5.0.1",
+    "json5": "^1.0.1",
+    "jsprim": "^1.4.1",
+    "kind-of": "^6.0.3",
+    "kleur": "^3.0.3",
+    "leven": "^3.1.0",
+    "levn": "^0.3.0",
+    "lines-and-columns": "^1.1.6",
+    "load-json-file": "^4.0.0",
+    "locate-path": "^2.0.0",
+    "lodash": "^4.17.21",
+    "lodash.clonedeep": "^4.5.0",
+    "lodash.merge": "^4.6.2",
+    "lodash.sortby": "^4.7.0",
+    "lodash.truncate": "^4.4.2",
+    "lolex": "^5.1.2",
+    "lru-cache": "^4.1.5",
+    "make-dir": "^3.1.0",
+    "makeerror": "^1.0.11",
+    "map-cache": "^0.2.2",
+    "map-visit": "^1.0.0",
+    "merge-stream": "^2.0.0",
+    "micromatch": "^4.0.4",
+    "mime-db": "^1.49.0",
+    "mime-types": "^2.1.32",
+    "mimic-fn": "^2.1.0",
+    "minimatch": "^3.0.4",
+    "minimist": "^1.2.5",
+    "mixin-deep": "^1.3.2",
+    "mkdirp": "^0.5.5",
+    "ms": "^2.1.2",
+    "mute-stream": "^0.0.8",
+    "nanomatch": "^1.2.13",
+    "natural-compare": "^1.4.0",
+    "nice-try": "^1.0.5",
+    "node-fetch": "^3.0.0",
+    "node-int64": "^0.4.0",
+    "node-modules-regexp": "^1.0.0",
+    "node-notifier": "^6.0.0",
+    "node-releases": "^1.1.75",
+    "normalize-package-data": "^2.5.0",
+    "normalize-path": "^3.0.0",
+    "npm-run-path": "^2.0.2",
+    "nwsapi": "^2.2.0",
+    "oauth-sign": "^0.9.0",
+    "object-copy": "^0.1.0",
+    "object-inspect": "^1.11.0",
+    "object-keys": "^1.1.1",
+    "object-visit": "^1.0.1",
+    "object.assign": "^4.1.2",
+    "object.entries": "^1.1.4",
+    "object.pick": "^1.3.0",
+    "object.values": "^1.1.4",
+    "once": "^1.4.0",
+    "onetime": "^5.1.2",
+    "optionator": "^0.8.3",
+    "os-tmpdir": "^1.0.2",
+    "p-each-series": "^2.2.0",
+    "p-finally": "^1.0.0",
+    "p-limit": "^1.3.0",
+    "p-locate": "^2.0.0",
+    "p-try": "^1.0.0",
+    "parent-module": "^1.0.1",
+    "parse-json": "^4.0.0",
+    "parse5": "^5.1.0",
+    "pascalcase": "^0.1.1",
+    "path-exists": "^3.0.0",
+    "path-is-absolute": "^1.0.1",
+    "path-key": "^2.0.1",
+    "path-parse": "^1.0.7",
+    "path-type": "^3.0.0",
+    "performance-now": "^2.1.0",
+    "picomatch": "^2.3.0",
+    "pify": "^3.0.0",
+    "pirates": "^4.0.1",
+    "pkg-dir": "^2.0.0",
+    "pkg-up": "^2.0.0",
+    "pn": "^1.1.0",
+    "posix-character-classes": "^0.1.1",
+    "prelude-ls": "^1.1.2",
+    "pretty-format": "^25.5.0",
+    "progress": "^2.0.3",
+    "prompts": "^2.4.1",
+    "pseudomap": "^1.0.2",
+    "psl": "^1.8.0",
+    "pump": "^3.0.0",
+    "punycode": "^2.1.1",
+    "qs": "^6.5.2",
+    "react-is": "^16.13.1",
+    "read-pkg": "^3.0.0",
+    "read-pkg-up": "^3.0.0",
+    "realpath-native": "^2.0.0",
+    "regex-not": "^1.0.2",
+    "regexpp": "^2.0.1",
+    "remove-trailing-separator": "^1.1.0",
+    "repeat-element": "^1.1.4",
+    "repeat-string": "^1.6.1",
+    "request": "^2.88.2",
+    "request-promise-core": "^1.1.4",
+    "request-promise-native": "^1.0.9",
+    "require-directory": "^2.1.1",
+    "require-from-string": "^2.0.2",
+    "require-main-filename": "^2.0.0",
+    "resolve": "^1.20.0",
+    "resolve-cwd": "^3.0.0",
+    "resolve-from": "^4.0.0",
+    "resolve-url": "^0.2.1",
+    "restore-cursor": "^3.1.0",
+    "ret": "^0.1.15",
+    "rimraf": "^2.6.3",
+    "rsvp": "^4.8.5",
+    "run-async": "^2.4.1",
+    "rxjs": "^6.6.7",
+    "safe-buffer": "^5.1.2",
+    "safe-regex": "^1.1.0",
+    "safer-buffer": "^2.1.2",
+    "sane": "^4.1.0",
+    "saxes": "^3.1.11",
+    "semver": "^6.3.0",
+    "set-blocking": "^2.0.0",
+    "set-value": "^2.0.1",
+    "shebang-command": "^1.2.0",
+    "shebang-regex": "^1.0.0",
+    "shellwords": "^0.1.1",
+    "side-channel": "^1.0.4",
+    "sigmund": "^1.0.1",
+    "signal-exit": "^3.0.3",
+    "sisteransi": "^1.0.5",
+    "slash": "^3.0.0",
+    "slice-ansi": "^2.1.0",
+    "snapdragon": "^0.8.2",
+    "snapdragon-node": "^2.1.1",
+    "snapdragon-util": "^3.0.1",
+    "source-map": "^0.6.1",
+    "source-map-resolve": "^0.5.3",
+    "source-map-support": "^0.5.19",
+    "source-map-url": "^0.4.1",
+    "spdx-correct": "^3.1.1",
+    "spdx-exceptions": "^2.3.0",
+    "spdx-expression-parse": "^3.0.1",
+    "spdx-license-ids": "^3.0.10",
+    "split-string": "^3.1.0",
+    "sprintf-js": "^1.0.3",
+    "sshpk": "^1.16.1",
+    "stack-utils": "^1.0.5",
+    "static-extend": "^0.1.2",
+    "stealthy-require": "^1.1.1",
+    "string-length": "^3.1.0",
+    "string-width": "^4.2.2",
+    "string.prototype.trimend": "^1.0.4",
+    "string.prototype.trimstart": "^1.0.4",
+    "strip-ansi": "^5.2.0",
+    "strip-bom": "^3.0.0",
+    "strip-eof": "^1.0.0",
+    "strip-final-newline": "^2.0.0",
+    "strip-json-comments": "^3.1.1",
+    "supports-color": "^5.5.0",
+    "supports-hyperlinks": "^2.2.0",
+    "symbol-tree": "^3.2.4",
+    "table": "^5.4.6",
+    "terminal-link": "^2.1.1",
+    "test-exclude": "^6.0.0",
+    "text-table": "^0.2.0",
+    "throat": "^5.0.0",
+    "through": "^2.3.8",
+    "tmp": "^0.0.33",
+    "tmpl": "^1.0.4",
+    "to-fast-properties": "^2.0.0",
+    "to-object-path": "^0.3.0",
+    "to-regex": "^3.0.2",
+    "to-regex-range": "^5.0.1",
+    "tough-cookie": "^3.0.1",
+    "tr46": "^1.0.1",
+    "tsconfig-paths": "^3.11.0",
+    "tslib": "^1.14.1",
+    "tunnel-agent": "^0.6.0",
+    "tweetnacl": "^0.14.5",
+    "type-check": "^0.3.2",
+    "type-detect": "^4.0.8",
+    "type-fest": "^0.8.1",
+    "typedarray-to-buffer": "^3.1.5",
+    "unbox-primitive": "^1.0.1",
+    "union-value": "^1.0.1",
+    "unset-value": "^1.0.0",
+    "uri-js": "^4.4.1",
+    "urix": "^0.1.0",
+    "use": "^3.1.1",
+    "uuid": "^3.4.0",
+    "v8-compile-cache": "^2.3.0",
+    "v8-to-istanbul": "^4.1.4",
+    "validate-npm-package-license": "^3.0.4",
+    "verror": "^1.10.0",
+    "w3c-hr-time": "^1.0.2",
+    "w3c-xmlserializer": "^1.1.2",
+    "walker": "^1.0.7",
+    "webidl-conversions": "^4.0.2",
+    "whatwg-encoding": "^1.0.5",
+    "whatwg-mimetype": "^2.3.0",
+    "whatwg-url": "^7.1.0",
+    "which": "^1.3.1",
+    "which-boxed-primitive": "^1.0.2",
+    "which-module": "^2.0.0",
+    "word-wrap": "^1.2.3",
+    "wrap-ansi": "^6.2.0",
+    "wrappy": "^1.0.2",
+    "write": "^1.0.3",
+    "write-file-atomic": "^3.0.3",
+    "ws": "^7.5.4",
+    "xml-name-validator": "^3.0.0",
+    "xmlchars": "^2.2.0",
+    "y18n": "^4.0.3",
+    "yallist": "^2.1.2",
+    "yargs": "^15.4.1",
+    "yargs-parser": "^18.1.3"
+  },
+  "keywords": []
 }
